--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -165,7 +165,7 @@
             </li>
             <li class="dropdown hidden-xs">
               <button class="navbar-account-btn" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                <img class="rounded" width="36" height="36" src="assets/img/0180441436.jpg" alt="Teddy Wilson"> Teddy Wilson
+                <img class="rounded" width="36" height="36" src="assets/img/0180441436.jpg" alt="Teddy Wilson">{{userData.first_name}}
                 <span class="caret"></span>
               </button>
               <ul class="dropdown-menu dropdown-menu-right" id="hide_dropdown">
