--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,147 +1,144 @@
-<app-home></app-home>
 <div class="profilePage"></div>
-<div class="layout-content">
-  <div class="profile">
-    <div class="profile-header">
-      <div class="profile-cover">
-        <div class="profile-container">
-          <div class="profile-card">
-            <div class="profile-avetar">
-              <img class="profile-avetar-img" width="128" height="128" src="assets/img/0180441436.jpg" alt="Teddy Wilson">
-            </div>
-            <div class="profile-overview">
-              <h1 class="profile-name">TeddyWilson</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam quae, quam reprehenderit blanditiis. Necessitatibus et vitae</p>
-            </div>    
+<div class="profile">
+  <div class="profile-header">
+    <div class="profile-cover">
+      <div class="profile-container">
+        <div class="profile-card">
+          <div class="profile-avetar">
+            <img class="profile-avetar-img" width="128" height="128" src="assets/img/0180441436.jpg" alt="Teddy Wilson">
           </div>
-          <div class="profile-tabs">
-            <ul class="profile-nav">
-              <li class="active">
-                <a routerLink="#">Details</a>
-              </li>   
-            </ul>
-          </div>
+          <div class="profile-overview">
+            <h1 class="profile-name">{{userData.first_name}}</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam quae, quam reprehenderit blanditiis. Necessitatibus et vitae</p>
+          </div>    
+        </div>
+        <div class="profile-tabs">
+          <ul class="profile-nav">
+            <li class="active">
+              <a routerLink="#">Details</a>
+            </li>   
+          </ul>
         </div>
       </div>
     </div>
-    <div class="profile-body">
-       <div class="col-md-6">
-        <div class="card">    
-          <div class="card-body">
-            <div class="card-search"> 
-              <div class="card-search-results">
-                <div class="timeline">
-                  <div class="timeline-item">
-                    <div class="timeline-segment">
-                      <div class="timeline-divider"></div>
-                    </div>
-                    <div class="timeline-content"></div>
+  </div>
+  <div class="profile-body">
+      <div class="col-md-6">
+      <div class="card">    
+        <div class="card-body">
+          <div class="card-search"> 
+            <div class="card-search-results">
+              <div class="timeline">
+                <div class="timeline-item">
+                  <div class="timeline-segment">
+                    <div class="timeline-divider"></div>
                   </div>
-                  <div class="timeline-item">
-                    <div class="timeline-segment">
-                      <div class="timeline-media bg-primary circle sq-24">
-                        <div class="icon icon-check"></div>
-                      </div>
-                    </div>
-                    <div class="timeline-content">
-                     <div class="timeline-row">
-                        <div class="media">
-                          <div class="media-body">
-                            <h5 class="m-y-0">Email</h5>
-                            <p>
-                              <small>replied@gmail.com</small>
-                            </p>
-                          </div>
-                        </div>                   
-                      </div>
+                  <div class="timeline-content"></div>
+                </div>
+                <div class="timeline-item">
+                  <div class="timeline-segment">
+                    <div class="timeline-media bg-primary circle sq-24">
+                      <div class="icon icon-check"></div>
                     </div>
                   </div>
-                   <div class="timeline-item">
-                    <div class="timeline-segment">
-                      <div class="timeline-media bg-primary circle sq-24">
-                        <div class="icon icon-check"></div>
-                      </div>
+                  <div class="timeline-content">
+                    <div class="timeline-row">
+                      <div class="media">
+                        <div class="media-body">
+                          <h5 class="m-y-0">Email</h5>
+                          <p>
+                            <small>{{userData.email}}</small>
+                          </p>
+                        </div>
+                      </div>                   
                     </div>
-                    <div class="timeline-content">
-                     <div class="timeline-row">
-                        <div class="media">
-                          <div class="media-body">
-                            <h5 class="m-y-0">Phone</h5>
-                            <p>
-                              <small>+91365463777</small>
-                            </p>
-                          </div>
-                        </div>                      
-                      </div>
+                  </div>
+                </div>
+                  <div class="timeline-item">
+                  <div class="timeline-segment">
+                    <div class="timeline-media bg-primary circle sq-24">
+                      <div class="icon icon-check"></div>
+                    </div>
+                  </div>
+                  <div class="timeline-content">
+                    <div class="timeline-row">
+                      <div class="media">
+                        <div class="media-body">
+                          <h5 class="m-y-0">Phone</h5>
+                          <p>
+                            <small>{{userData.phone_number}}</small>
+                          </p>
+                        </div>
+                      </div>                      
                     </div>
                   </div>
                 </div>
               </div>
-            </div>     
-          </div>
+            </div>
+          </div>     
         </div>
       </div>
-      <!-- <div class="col-md-6">
-        <div class="card">  
-          <div class="card-body">
-            <div class="card-search">    
-              <div class="card-search-results">
-                <div class="timeline">
-                  <div class="timeline-item">
-                    <div class="timeline-segment">
-                      <div class="timeline-divider"></div>
-                    </div>
-                    <div class="timeline-content"></div>
+    </div>
+    <!-- <div class="col-md-6">
+      <div class="card">  
+        <div class="card-body">
+          <div class="card-search">    
+            <div class="card-search-results">
+              <div class="timeline">
+                <div class="timeline-item">
+                  <div class="timeline-segment">
+                    <div class="timeline-divider"></div>
                   </div>
-                  <div class="timeline-item">
-                    <div class="timeline-segment">
-                      <div class="timeline-media bg-primary circle sq-24">
-                        <div class="icon icon-check"></div>
-                      </div>
-                    </div>
-                    <div class="timeline-content">
-                     <div class="timeline-row">
-                        <div class="media">
-                          <div class="media-body">
-                            <h5 class="m-y-0">Address</h5>
-                            <p>
-                              <small>replied@gmail.com</small>
-                            </p>
-                          </div>
-                        </div>                     
-                      </div>
-                    </div>
-                  </div>
-                   <div class="timeline-item">
-                    <div class="timeline-segment">
-                      <div class="timeline-media bg-primary circle sq-24">
-                        <div class="icon icon-check"></div>
-                      </div>
-                    </div>
-                    <div class="timeline-content">
-                     <div class="timeline-row">
-                        <div class="media">
-                          <div class="media-body">
-                            <h5 class="m-y-0">Location</h5>
-                            <p>
-                              <small>USA</small>
-                            </p>
-                          </div>
-                        </div>                
-                      </div>
-                    </div>
-                  </div>       
+                  <div class="timeline-content"></div>
                 </div>
+                <div class="timeline-item">
+                  <div class="timeline-segment">
+                    <div class="timeline-media bg-primary circle sq-24">
+                      <div class="icon icon-check"></div>
+                    </div>
+                  </div>
+                  <div class="timeline-content">
+                    <div class="timeline-row">
+                      <div class="media">
+                        <div class="media-body">
+                          <h5 class="m-y-0">Address</h5>
+                          <p>
+                            <small>replied@gmail.com</small>
+                          </p>
+                        </div>
+                      </div>                     
+                    </div>
+                  </div>
+                </div>
+                  <div class="timeline-item">
+                  <div class="timeline-segment">
+                    <div class="timeline-media bg-primary circle sq-24">
+                      <div class="icon icon-check"></div>
+                    </div>
+                  </div>
+                  <div class="timeline-content">
+                    <div class="timeline-row">
+                      <div class="media">
+                        <div class="media-body">
+                          <h5 class="m-y-0">Location</h5>
+                          <p>
+                            <small>USA</small>
+                          </p>
+                        </div>
+                      </div>                
+                    </div>
+                  </div>
+                </div>       
               </div>
-            </div>         
-          </div>
+            </div>
+          </div>         
         </div>
-      </div> -->
-      <div class="clearfix"></div>
-      <div class="col-md-12">  
-          <button class="btn btn-primary btn-sm pull-right" routerLink="/editprofile" type="button">Edit profile</button>      
-          <button class="btn btn-primary btn-sm pull-right m-r" routerLink="/changepassword" type="button">Change Password</button> 
       </div>
+    </div> -->
+    <div class="clearfix"></div>
+    <div class="col-md-12">  
+        <button class="btn btn-primary btn-sm pull-right" routerLink="/editprofile" type="button">Edit profile</button>      
+        <button class="btn btn-primary btn-sm pull-right m-r" routerLink="/changepassword" type="button">Change Password</button> 
     </div>
   </div>
 </div>
