--- a/src/app/view/category/category.component.html
+++ b/src/app/view/category/category.component.html
@@ -34,7 +34,7 @@
                                         <mfDefaultSorter by="age">IMAGE</mfDefaultSorter>
                                     </th>
                                     <th>
-                                        <mfDefaultSorter by="city">CAREGORY</mfDefaultSorter>
+                                        <mfDefaultSorter by="city">CATEGORY</mfDefaultSorter>
                                     </th>
                                     <th>
                                         <mfDefaultSorter by="city">PRICE</mfDefaultSorter>
