login changes and add product update

--- a/src/app/view/category/category.component.html
+++ b/src/app/view/category/category.component.html
@@ -53,7 +53,7 @@
                                     <th>{{p.name}}</th>
                                     <th><img height="40px" width="60" src="http://54.162.3.238:3005/{{p.image[0].image_url}}"/></th>
                                     <!-- <th class="text-center">{{p.description}}</th> -->
-                                    <th>{{p.category_id}}</th>
+                                    <th>{{p.category_name}}</th>
                                     <th>{{p.price}}</th>
                                     <th>
                                         <a class="btn btn-success btn-sm btn-labeled" >
@@ -123,7 +123,7 @@
                     </div>
                     <div class="col-md-12">
                         <label>CATEGORY :</label>
-                        <div>{{productD.category_id}}</div><br>
+                        <div>{{productD.category_name}}</div><br>
                     </div>
                     <div class="col-md-12">
                         <label>PRICE :</label>
