--- a/src/app/view/login/login.component.html
+++ b/src/app/view/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="login">
 	<div class="login-body">
 		<a class="login-brand" href="#">
-			<img class="img-responsive" src="assets/img/logo-blk.png" alt="logo">
+			<img class="img-responsive" style="background-color: darkred;" src="assets/img/footer-logo.png" alt="logo">
 		</a>
 		<div class="login-form">
 		<form data-toggle="validator">
