--- a/src/app/view/product/product.component.html
+++ b/src/app/view/product/product.component.html
@@ -44,7 +44,7 @@
                           </div>
                           <div class="form-group">
                               <div class=" col-sm-8  col-md-8 ">
-                                  <button class="btn btn-primary " type="submit" (click)="add(catagory_id)" >ADD TO PRODUCT </button>
+                                  <button class="btn btn-primary " type="submit" (click)="add(category_id)" >ADD TO PRODUCT </button>
                                   <button class="btn btn-primary" routerLink="/category" >PRODUCT VIEW</button>
                               </div>
                           </div>
