--- a/src/app/view/login/login.component.html
+++ b/src/app/view/login/login.component.html
@@ -1,15 +1,15 @@
 <div class="login">
 	<div class="login-body">
-		<a class="login-brand" href="#">
+		<a class="login-brand">
 			<img class="img-responsive" src="assets/img/gsh-logo.png" alt="logo">
 		</a>
 		<div class="login-form">
 		<form data-toggle="validator">
 			<div class="errorContainerWrap" *ngIf="showLoginError">
 				<div class="alert alert-danger alert-dismissable fade in">
-					<a href="#" class="close" data-dismiss="alert" aria-label="close">×</a>
+					<a class="close" data-dismiss="alert" aria-label="close">×</a>
 					<strong>Error! </strong>
-					<span class="errorContainer">{{login_error_msg}}</span>
+					<span class="error">{{login_error_msg}}</span>
 				</div>
 			</div>
 			<div class="form-group">
