--- a/src/app/view/category/category.component.html
+++ b/src/app/view/category/category.component.html
@@ -8,7 +8,7 @@
             <p class="title-bar-description">
                 <small>Welcome to Smart Home</small>
             </p>
-            <!-- <button class="btn btn-primary" routerLink="/app-product">ADD PRODUCT</button> -->
+            <button class="btn btn-primary" routerLink="/app-product">ADD PRODUCT</button>
         </div>
         <div class="row gutter-xs">
             <div class="col-xs-12">
