--- a/src/app/view/dashboard/dashboard.component.html
+++ b/src/app/view/dashboard/dashboard.component.html
@@ -1,11 +1,10 @@
 <div class="dashborad-page">
     <div class="title-bar">
     <h1 class="title-bar-title">
-        <span class="d-ib">Dashboard</span>
-        
+        <span class="d-ib">Dashboard</span>    
     </h1>
     <p class="title-bar-description">
-        <small>You can personalize your dashboard by using <a href="widgets.html">widgets</a>.</small>
+        <small>Welcome to Smart Home Dashboard</small>
     </p>
     </div>
     <div class="row gutter-xs">
