--- a/src/app/view/category/category.component.css
+++ b/src/app/view/category/category.component.css
@@ -4,9 +4,10 @@
     border: 2px solid #ccc;
     border-radius: 4px;
     font-size: 16px;
-    background-image: url('/assets/img/searchicon.png');
+    background-image: url(/assets/img/c.png);
     background-color: white;
-    background-position: 9px 3px; 
+    background-size: 33px;
+    background-position: 5px 1px;
     background-repeat: no-repeat;
     padding: 0px 20px 2px 40px;
     -webkit-transition: width 0.4s ease-in-out;
