--- a/src/app/view/change-password/change-password.component.html
+++ b/src/app/view/change-password/change-password.component.html
@@ -6,7 +6,7 @@
               <span class="d-ib">Change Password </span>
             </h1>
             <p class="title-bar-description">
-                <small>Welcome to Blind Drunk</small>
+                <small>Welcome to Smart Home</small>
             </p>
         </div>
         <div class="row gutter-xs">
@@ -39,7 +39,8 @@
                         </div> 
                         <div class="form-group">
                             <div class=" col-sm-8  col-md-8 ">
-                                <button class="btn btn-primary btn-block " (click)="passchange()" type="submit">Submit</button>
+                                <button class="btn btn-primary " (click)="passchange()" type="submit">Submit</button>
+                                <button class="btn btn-primary " routerLink="/profile" type="submit">back</button>
                             </div>
                         </div>
                     </form>
