--- a/src/app/view/sidebar/sidebar.component.html
+++ b/src/app/view/sidebar/sidebar.component.html
@@ -13,18 +13,23 @@
 				</li>
 				<li class="sidenav-item">
 					<a [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/profile']" aria-haspopup="true">
-						<span class="sidenav-icon icon icon-home"></span>
+						<span class="sidenav-icon icon fa fa-user"></span>
 						<span class="sidenav-label">Profile</span>
 					</a>
 				</li>
 				<li class="sidenav-item">
 					<a [routerLinkActive]="['active']" [routerLink]="['/category']" aria-haspopup="true">
-						<span class="sidenav-icon icon icon-user"></span>
-						<span class="sidenav-label">Category Managment</span>
+						<span class="sidenav-icon icon fa fa-bars"></span>
+						<span class="sidenav-label">Product Managment</span>
+					</a>
+				</li>
+				<li class="sidenav-item">
+					<a [routerLinkActive]="['active']" [routerLink]="['/user-list']" aria-haspopup="true">
+						<span class="sidenav-icon fa fa-user-o"></span>
+						<span class="sidenav-label">User List</span>
 					</a>
 				</li>
 			</ul>
 		</nav>
     </div>
   </div>
-</div>
